--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: all 1.5s ease-out;
+    transition: all .8s ease-out;
 }
 
 .todo li {
